fix footer layout issues in order response pages

--- a/frontend/src/Pages/CSS/OrderFail.css
+++ b/frontend/src/Pages/CSS/OrderFail.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 60vh;
+    height: 75vh;
 }
 .infobox{
     display: flex;
